--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
+Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
+
 //Rewrite to www
 Options +FollowSymLinks
 RewriteEngine on
