--- a/.htaccess
+++ b/.htaccess
@@ -14,4 +14,4 @@ deny from all
  
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://www.jmkjr.com/$1 [R,L]
+RewriteRule (.*) https://www.jmkjr.com/ [R,L]
