--- a/.htaccess
+++ b/.htaccess
@@ -13,5 +13,5 @@ deny from all
 </Files>
  
 RewriteEngine On
-RewriteCond %{SERVER_PORT} 80
-RewriteRule (.*) https://www.jmkjr.com/ [R,L]
+RewriteCond %{HTTPS} off
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
