--- a/.htaccess
+++ b/.htaccess
@@ -14,4 +14,4 @@ deny from all
  
 RewriteEngine On
 RewriteCond %{HTTPS} off
-RewriteRule (.*) https://www.jmkjr.com%{REQUEST_URI} [R=301,L]
+RewriteRule (.*) https://www.jmkjr.com{REQUEST_URI} [R=301,L]
