--- a/.htaccess
+++ b/.htaccess
@@ -15,3 +15,8 @@ deny from all
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
 RewriteRule ^(.*)$ https://www.jmkjr.com/$1 [R,L]
+
+RewriteEngine On
+RewriteCond %{HTTP_HOST} ^jmkjr\.com [NC]
+RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://www.jmkjr.com/$1 [R,L]
