--- a/.htaccess
+++ b/.htaccess
@@ -11,12 +11,7 @@ RewriteRule ^(.*)$ http://www.jmkjr.com/$1 [r=301,nc]
 order allow,deny
 deny from all
 </Files>
- 
-RewriteEngine On
-RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://www.jmkjr.com/$1 [R,L]
 
 RewriteEngine On
-RewriteCond %{HTTP_HOST} ^jmkjr\.com [NC]
-RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://www.jmkjr.com/$1 [R,L]
+RewriteCond %{HTTPS} on
+RewriteRule (.*) http://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
