--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,10 @@
 Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
 
 //Rewrite to www
-Options +FollowSymLinks
-RewriteEngine on
-RewriteCond %{HTTP_HOST} ^jmkjr.com[nc]
-RewriteRule ^(.*)$ http://www.jmkjr.com/$1 [r=301,nc]
+//Options +FollowSymLinks
+//RewriteEngine on
+//RewriteCond %{HTTP_HOST} ^jmkjr.com[nc]
+//RewriteRule ^(.*)$ http://www.jmkjr.com/$1 [r=301,nc]
 
 //Prevent viewing of .htaccess file
 <Files .htaccess>
